# NXP-S32K3518-QEMU-Board-Emulation

./: LICENSE.md  README.md  build_and_run.sh
documentation/: main.tex
firmware/code/: FreeRTOSConfig.h  Makefile  adc.c  adc.h  linker.ld  main.c  qemu-debug-log  uart.c  uart.h
firmware/code/Output/: firmware.elf  firmware.map
qemu/hw/adc/: meson.build  nxps32k3x8evb_adc.c
qemu/hw/arm/: nxps32k3x8evb.c  nxps32k3x8evb_mcu.c
qemu/hw/char/: meson.build  nxps32k3x8evb_uart.c  trace-events
qemu/include/hw/adc/: nxps32k3x8evb_adc.h
qemu/include/hw/arm/: nxps32k3x8evb.h
qemu/include/hw/char/: nxps32k3x8evb_uart.h
